--- a/index.html
+++ b/index.html
@@ -2,72 +2,72 @@
 <html lang="es" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0">
         <link rel="stylesheet" href="assets/css/style.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css?family=Raleway:400,700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
       integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
-        crossorigin="anonymous">
-          <link href="/your-path-to-fontawesome/css/fontawesome.css" rel="stylesheet">
+      crossorigin="anonymous">
 
     <title>Starup Treek-In</title>
   </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar fixed-top" style="background-color:#fff">
-        <div class="container">
-          <a class="navbar-brand" href="#"><svg width="48px" height="40px" viewBox="0 0 48 40" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-    <!-- Generator: Sketch 52.5 (67469) - http://www.bohemiancoding.com/sketch -->
-    <title>Logo</title>
-    <desc>Created with Sketch.</desc>
-    <defs>
-        <polygon id="path-1" points="29 12.6197183 19.205298 12.6197183 19.205298 26.2163315 19.205298 40 9.84271523 40 9.84271523 12.6197183 0 12.6197183 0 4 29 4"></polygon>
-        <path d="M35,13 L35,4 L36,4 L36,13 L35,13 Z M35,2 L35,0 L36,0 L36,2 L35,2 Z M48,13 L46.2516556,13 L46.2516556,8.05084746 C46.2516556,7.10169017 46.0827831,6.41243153 45.7450331,5.98305085 C45.4072831,5.55367017 44.8940432,5.33898305 44.205298,5.33898305 C43.8476803,5.33898305 43.490068,5.39830449 43.1324503,5.51694915 C42.7748326,5.63559381 42.4370877,5.79660915 42.1192053,6 C41.8013229,6.20339085 41.52318,6.44632627 41.2847682,6.72881356 C41.0463564,7.01130085 40.8675503,7.3220322 40.7483444,7.66101695 L40.7483444,13 L39,13 L39,4.15254237 L40.589404,4.15254237 L40.589404,6.05084746 C41.0000021,5.42937542 41.5927114,4.93220525 42.3675497,4.55932203 C43.142388,4.18643881 43.9867504,4 44.9006623,4 C45.4966917,4 45.9933755,4.09321941 46.3907285,4.27966102 C46.7880815,4.46610263 47.1059591,4.72598703 47.3443709,5.05932203 C47.5827826,5.39265703 47.7516551,5.78530847 47.8509934,6.23728814 C47.9503316,6.6892678 48,7.18078831 48,7.71186441 L48,13 Z" id="path-2"></path>
-    </defs>
-    <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-        <g id="Desktop-HD" transform="translate(-136.000000, -45.000000)">
-            <g id="header-section" transform="translate(0.000000, 2.000000)">
-                <g id="Logo" transform="translate(136.000000, 43.000000)">
-                    <g id="T">
-                        <use fill="#FFFFFF" xlink:href="#path-1"></use>
-                        <use fill="#011627" xlink:href="#path-1"></use>
-                    </g>
-                    <g id="in">
-                        <use fill="#FFFFFF" xlink:href="#path-2"></use>
-                        <use fill="#000000" xlink:href="#path-2"></use>
-                    </g>
+        <div class="container" id="nav">
+          <a class="navbar-brand" href="#" id="logo">
+<svg width="48px" height="40px" viewBox="0 0 48 40" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+<!-- Generator: Sketch 52.5 (67469) - http://www.bohemiancoding.com/sketch -->
+<title>Logo</title>
+<desc>Created with Sketch.</desc>
+<defs>
+<polygon id="path-1" points="29 12.6197183 19.205298 12.6197183 19.205298 26.2163315 19.205298 40 9.84271523 40 9.84271523 12.6197183 0 12.6197183 0 4 29 4"></polygon>
+<path d="M35,13 L35,4 L36,4 L36,13 L35,13 Z M35,2 L35,0 L36,0 L36,2 L35,2 Z M48,13 L46.2516556,13 L46.2516556,8.05084746 C46.2516556,7.10169017 46.0827831,6.41243153 45.7450331,5.98305085 C45.4072831,5.55367017 44.8940432,5.33898305 44.205298,5.33898305 C43.8476803,5.33898305 43.490068,5.39830449 43.1324503,5.51694915 C42.7748326,5.63559381 42.4370877,5.79660915 42.1192053,6 C41.8013229,6.20339085 41.52318,6.44632627 41.2847682,6.72881356 C41.0463564,7.01130085 40.8675503,7.3220322 40.7483444,7.66101695 L40.7483444,13 L39,13 L39,4.15254237 L40.589404,4.15254237 L40.589404,6.05084746 C41.0000021,5.42937542 41.5927114,4.93220525 42.3675497,4.55932203 C43.142388,4.18643881 43.9867504,4 44.9006623,4 C45.4966917,4 45.9933755,4.09321941 46.3907285,4.27966102 C46.7880815,4.46610263 47.1059591,4.72598703 47.3443709,5.05932203 C47.5827826,5.39265703 47.7516551,5.78530847 47.8509934,6.23728814 C47.9503316,6.6892678 48,7.18078831 48,7.71186441 L48,13 Z" id="path-2"></path>
+</defs>
+<g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+    <g id="Desktop-HD" transform="translate(-136.000000, -45.000000)">
+        <g id="header-section" transform="translate(0.000000, 2.000000)">
+            <g id="Logo" transform="translate(136.000000, 43.000000)">
+                <g id="T">
+                    <use fill="#FFFFFF" xlink:href="#path-1"></use>
+                    <use fill="#011627" xlink:href="#path-1"></use>
+                </g>
+                <g id="in">
+                    <use fill="#FFFFFF" xlink:href="#path-2"></use>
+                    <use fill="#000000" xlink:href="#path-2"></use>
                 </g>
             </g>
         </g>
     </g>
+</g>
 </svg>
 </a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"  aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
-          </button>
-          <div class="collapse navbar-collapse px-5 mx-5" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
-              <div class="nav-item">
-                <li class="nav-item">
-                  <a class="nav-link" href="#index"><label>Acerca de</label></a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#caracteristicas"><label>Caracteristicas</label></a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#precio"><label>precios</label></a>
-                </li>
-              </div>
-              <div class="sesion">
-                <li class="nav-item">
-                  <a class="nav-link" href="#precio"><label>Iniciar Sesion</label></a>
-                </li>
-                <button class="btn btn-primary " type="submit">Registrate</button>
-              </div>
-            </ul>
-          </div>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"  aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
+        </button>
+        <div class="collapse navbar-collapse px-5 mx-5" id="navbarNav">
+          <ul class="navbar-nav ml-auto">
+            <div class="nav-item">
+              <li class="nav-item">
+                <a class="nav-link" href="#index"><label>Acerca de</label></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#caracteristicas"><label>Caracteristicas</label></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#precio"><label>precios</label></a>
+              </li>
+            </div>
+            <div class="sesion">
+              <li class="nav-item">
+                <a class="nav-link" href="#precio"><label>Iniciar Sesion</label></a>
+              </li>
+              <button class="btn btn-primary " type="submit">Registrate</button>
+            </div>
+          </ul>
         </div>
-  </nav>
+      </div>
+</nav>
 
 <section class="container portada1">
 <div class="col-sm-12 col-md-4 col-lg-4">
@@ -89,78 +89,102 @@
   </div>
 </section>
 
-<section class="container-flex rectangulo">
-  <div class="caracteristicas">
-    <p>Caracteristicas</p>
-  </div>
-  <div class="row justify-content-center">
-     <div class="col-4">
-       <div class="grafico">
-           <svg width="318" height="165" xmlns="http://www.w3.org/2000/svg">
-                <g class="bar-graph" fill-rule="evenodd">
-                    <path class="a-bar" fill="#EE9480" d="M10.949 53h34.778v108H10.949zM63.613 0h34.778v161H63.613zM116.276 32h34.778v129h-34.778z"/>
-                    <path class="b-bar" fill="#2AB7CA" d="M168.94 53h34.778v108H168.94zM221.603 28h34.778v133h-34.778zM274.267 73h34.778v88h-34.778z"/>
-                    <path class="plane" d="M3 162.5h312.503" stroke="#979797" stroke-width="5" stroke-linecap="square"/>
-                </g>
-            </svg>
-       </div>
-     </div>
-     <div class="col-4">
-       <div class="estadisticas">
-         <p>Estadisticas de tu Progreso</p>
-       </div>
-       <div class="texto3">
-         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
-       </div>
-     </div>
-   </div>
-
-</section>
 
 
-<div class="cointainer-fluid my-5 p-5 containprice">
-  <div class="tituloprecio">
-    Precio
-  </div>
-  <div class="row justify-content-around">
-    <div class="col-4">
-      <div class="card">
-          <div class="card-header">
-            Trekk-in Free
-          </div>
-          <div class="card-body">
-            <h5 class="card-title">$ 0 / mes </h5>
-            <p class="card-text">Ver mapas creados por usuarios</p>
-            <p class="card-text">Concretar con otros usuarios</p>
-            <br><br><br>
-            <hr>
-            <a href="#" class="btn btn-primary">Obtén Free</a>
-          </div>
-     </div>
+
+<section class="Seccion charact">
+<div class="container1">
+  <div class="cointainer-fluid my-5 p-5">
+    <div class="caracteristicas">
+      <p>Caracteristicas</p>
     </div>
-    <div class="col-4">
-      <div class="card">
-        <div class="card-header">
-          Trekk-in Premium
-        </div>
-        <div class="card-body">
-          <h5 class="card-title">$3500 / mes</h5>
-          <p class="card-text">Ver mapas creados por usuarios</p>
-          <p class="card-text">Concretar con otros usuarios</p>
-          <p class="card-text">Definir mejores rutas</p>
-          <p class="card-text">Mapas Offline</p>
-          <p class="card-text">Integración con otras aplicaciones</p>
-          <hr>
-          <a href="#" class="btn btn-primary">Obtén Premium</a>
+    <div class="row justify-content-around">
+      <div class="col-sm-12 col-md-4 col-lg-4">
+       <div class="row">
+         <div class="col-4">
+           <div class="grafico">
+               <svg width="318" height="165" xmlns="http://www.w3.org/2000/svg">
+                    <g class="bar-graph" fill-rule="evenodd">
+                        <path class="a-bar" fill="#EE9480" d="M10.949 53h34.778v108H10.949zM63.613 0h34.778v161H63.613zM116.276 32h34.778v129h-34.778z"/>
+                        <path class="b-bar" fill="#2AB7CA" d="M168.94 53h34.778v108H168.94zM221.603 28h34.778v133h-34.778zM274.267 73h34.778v88h-34.778z"/>
+                        <path class="plane" d="M3 162.5h312.503" stroke="#979797" stroke-width="5" stroke-linecap="square"/>
+                    </g>
+                </svg>
+           </div>
+         </div>
+     </div>
+      </div>
+      <div class="col-sm-12 col-md-4 col-lg-4">
+        <div class="row">
+          <div class="estadisticas">
+              <p>Estadisticas de tu Progreso</p>
+            </div>
+            <div class="texto3">
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
+            </div>
+
         </div>
       </div>
     </div>
   </div>
+</div>
+</section>
+
+
+
+
+
+
+<section class="Seccion Precios">
+<div class="container2">
+  <div class="cointainer-fluid my-5 p-5">
+    <div class="tituloprecio">
+      Precio
+    </div>
+    <div class="row justify-content-around">
+      <div class="col-sm-12 col-md-4 col-lg-4">
+       <div class="row">
+        <div class="card">
+            <div class="card-header">
+              Trekk-in Free
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">$ 0 / mes </h5>
+              <p class="card-text">Ver mapas creados por usuarios</p>
+              <p class="card-text">Concretar con otros usuarios</p>
+              <br><br><br><br>
+              <hr>
+              <a href="#" class="btn btn-primary">Obtén Free</a>
+            </div>
+       </div>
+     </div>
+      </div>
+      <div class="col-sm-12 col-md-4 col-lg-4">
+        <div class="row">
+          <div class="card">
+            <div class="card-header">
+              Trekk-in Premium
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">$3500 / mes</h5>
+              <p class="card-text">Ver mapas creados por usuarios</p>
+              <p class="card-text">Concretar con otros usuarios</p>
+              <p class="card-text">Definir mejores rutas</p>
+              <p class="card-text">Mapas Offline</p>
+              <p class="card-text">Integración con otras aplicaciones</p>
+              <hr>
+              <a href="#" class="btn btn-primary">Obtén Premium</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
+</section>
 
 
-<div class="preciosfondo" class="responsive">
+<div  class="responsive" >
   <?xml version="1.0" encoding="UTF-8"?>
     <svg width="1345px" height="893px" viewBox="0 0 1440 893" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
     <!-- Generator: Sketch 52.5 (67469) - http://www.bohemiancoding.com/sketch -->
