--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
               <li class="nav-item">
                 <a class="nav-link" href="#precio"><label>Iniciar Sesion</label></a>
               </li>
-              <button class="btn btn-primary " type="submit">Registrate</button>
+              <button class="btn btn-primary" type="submit">Registrate</button>
             </div>
           </ul>
         </div>
@@ -72,7 +72,7 @@
 <section class="container portada1">
 <div class="col-sm-12 col-md-4 col-lg-4">
   <div class="row my-5">
-    <div class="Texto1 my-5">
+    <div class="Texto1">
         <p>Haz Trekking sin parar</p>
     </div>
     <div class="texto2">
@@ -85,7 +85,7 @@
 
 <section>
   <div class="imagenfondo">
-    <img src="assets/img/bg-hero.png" class="responsive">
+    <img src="assets/img/bg-hero.svg" class="responsive">
   </div>
 </section>
 
@@ -181,24 +181,14 @@
     </div>
   </div>
 </div>
+<section>
+  <div class="fondoprecio">
+    <img src="assets/img/bg-price.svg" class="responsive">
+  </div>
+</section>
 </section>
 
 
-<div  class="responsive" >
-  <?xml version="1.0" encoding="UTF-8"?>
-    <svg width="1345px" height="893px" viewBox="0 0 1440 893" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-    <!-- Generator: Sketch 52.5 (67469) - http://www.bohemiancoding.com/sketch -->
-        <title>bg</title>
-        <desc>Created with Sketch.</desc>
-        <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-            <g id="Desktop-HD" transform="translate(0.000000, -1380.000000)" fill="#333745">
-                <g id="price-section" transform="translate(0.000000, 1380.000000)">
-                    <polygon id="bg" points="1.59872116e-13 -7.82541894e-14 669.142836 152.755831 953.958092 96.2376268 1440 279.254407 1440 893 7.99360578e-14 893"></polygon>
-                </g>
-            </g>
-        </g>
-    </svg>
-</div>
 
 <footer>
   <ul class="nav">
