--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
       integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
       crossorigin="anonymous">
-
     <title>Starup Treek-In</title>
   </head>
 <body>
@@ -69,28 +68,30 @@
       </div>
 </nav>
 
-<section class="container portada1">
-<div class="col-sm-12 col-md-4 col-lg-4">
-  <div class="row my-5">
-    <div class="Texto1">
-        <p>Haz Trekking sin parar</p>
+<section class="portada1">
+  <div class="container">
+     <div class="row justify-content-around">
+      <div class="col-sm-12 col-md-4 col-lg-4">
+        <div class="Texto1">
+          <p>Haz Trekking sin parar</p>
+        </div>
+        <div class="texto2">
+          <p>Con Trekk-in te desocuparás de la estimación de tu viaje, ya que con unos simples pasos podrás definir la mejor ruta a tomar con tus compañeros de expedición</p>
+        </div>
+        </div>
+        <div class="col-4">
+      </div>
     </div>
-    <div class="texto2">
-      <p>Con Trekk-in te desocuparás de la estimación de tu viaje, ya que con unos simples pasos podrás definir la mejor ruta a tomar con tus compañeros de expedición</p>
-    </div>
-  </div>
-</div>
-
+   </div>
 </section>
+
+
 
 <section>
   <div class="imagenfondo">
     <img src="assets/img/bg-hero.svg" class="responsive">
   </div>
 </section>
-
-
-
 
 <section class="Seccion charact">
 <div class="container1">
@@ -122,7 +123,6 @@
             <div class="texto3">
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
             </div>
-
         </div>
       </div>
     </div>
@@ -130,37 +130,30 @@
 </div>
 </section>
 
-
-
-
-
-
-<section class="Seccion Precios">
-<div class="container2">
-  <div class="cointainer-fluid my-5 p-5">
+<section>
+  <div class="precios">
     <div class="tituloprecio">
-      Precio
+      Precios
     </div>
-    <div class="row justify-content-around">
-      <div class="col-sm-12 col-md-4 col-lg-4">
-       <div class="row">
-        <div class="card">
-            <div class="card-header">
-              Trekk-in Free
-            </div>
-            <div class="card-body">
-              <h5 class="card-title">$ 0 / mes </h5>
-              <p class="card-text">Ver mapas creados por usuarios</p>
-              <p class="card-text">Concretar con otros usuarios</p>
-              <br><br><br><br>
-              <hr>
-              <a href="#" class="btn btn-primary">Obtén Free</a>
-            </div>
-       </div>
-     </div>
-      </div>
-      <div class="col-sm-12 col-md-4 col-lg-4">
-        <div class="row">
+    <div class="container">
+       <div class="row justify-content-around">
+        <div class="col-sm-12 col-md-4 col-lg-4">
+          <div class="card">
+              <div class="card-header">
+                Trekk-in Free
+              </div>
+              <div class="card-body">
+                <h5 class="card-title">$ 0 / mes </h5>
+                <p class="card-text">Ver mapas creados por usuarios</p>
+                <p class="card-text">Concretar con otros usuarios</p>
+                <br><br><br><br>
+                <hr>
+                <a href="#" class="btn btn-primary">Obtén Free</a>
+              </div>
+         </div>
+
+        </div>
+        <div class="col-sm-12 col-md-4 col-lg-4">
           <div class="card">
             <div class="card-header">
               Trekk-in Premium
@@ -177,17 +170,16 @@
             </div>
           </div>
         </div>
+        </div>
       </div>
     </div>
   </div>
-</div>
-<section>
-  <div class="fondoprecio">
-    <img src="assets/img/bg-price.svg" class="responsive">
-  </div>
-</section>
 </section>
 
+
+<div class="fondoprecio">
+  <img src="assets/img/bg-price.svg" class="responsive">
+</div>
 
 
 <footer>
