--- a/index.html
+++ b/index.html
@@ -12,60 +12,68 @@
     <title>Starup Treek-In</title>
   </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar fixed-top" style="background-color:#fff">
-        <div class="container" id="nav">
-          <a class="navbar-brand" href="#" id="logo">
-<svg width="48px" height="40px" viewBox="0 0 48 40" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-<!-- Generator: Sketch 52.5 (67469) - http://www.bohemiancoding.com/sketch -->
-<title>Logo</title>
-<desc>Created with Sketch.</desc>
-<defs>
-<polygon id="path-1" points="29 12.6197183 19.205298 12.6197183 19.205298 26.2163315 19.205298 40 9.84271523 40 9.84271523 12.6197183 0 12.6197183 0 4 29 4"></polygon>
-<path d="M35,13 L35,4 L36,4 L36,13 L35,13 Z M35,2 L35,0 L36,0 L36,2 L35,2 Z M48,13 L46.2516556,13 L46.2516556,8.05084746 C46.2516556,7.10169017 46.0827831,6.41243153 45.7450331,5.98305085 C45.4072831,5.55367017 44.8940432,5.33898305 44.205298,5.33898305 C43.8476803,5.33898305 43.490068,5.39830449 43.1324503,5.51694915 C42.7748326,5.63559381 42.4370877,5.79660915 42.1192053,6 C41.8013229,6.20339085 41.52318,6.44632627 41.2847682,6.72881356 C41.0463564,7.01130085 40.8675503,7.3220322 40.7483444,7.66101695 L40.7483444,13 L39,13 L39,4.15254237 L40.589404,4.15254237 L40.589404,6.05084746 C41.0000021,5.42937542 41.5927114,4.93220525 42.3675497,4.55932203 C43.142388,4.18643881 43.9867504,4 44.9006623,4 C45.4966917,4 45.9933755,4.09321941 46.3907285,4.27966102 C46.7880815,4.46610263 47.1059591,4.72598703 47.3443709,5.05932203 C47.5827826,5.39265703 47.7516551,5.78530847 47.8509934,6.23728814 C47.9503316,6.6892678 48,7.18078831 48,7.71186441 L48,13 Z" id="path-2"></path>
-</defs>
-<g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-    <g id="Desktop-HD" transform="translate(-136.000000, -45.000000)">
-        <g id="header-section" transform="translate(0.000000, 2.000000)">
-            <g id="Logo" transform="translate(136.000000, 43.000000)">
-                <g id="T">
-                    <use fill="#FFFFFF" xlink:href="#path-1"></use>
-                    <use fill="#011627" xlink:href="#path-1"></use>
+
+<nav class="navbar navbar-expand-lg navbar fixed-top" style="background-color:#fff">
+      <div class="container" id="nav">
+        <a class="navbar-brand" href="#" id="logo">
+            <svg width="48px" height="40px" viewBox="0 0 48 40" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                <!-- Generator: Sketch 52.5 (67469) - http://www.bohemiancoding.com/sketch -->
+                <polygon id="path-1" points="29 12.6197183 19.205298 12.6197183 19.205298 26.2163315 19.205298 40 9.84271523 40 9.84271523 12.6197183 0 12.6197183 0 4 29 4"></polygon>
+                <path d="M35,13 L35,4 L36,4 L36,13 L35,13 Z M35,2 L35,0 L36,0 L36,2 L35,2 Z M48,13 L46.2516556,13 L46.2516556,8.05084746 C46.2516556,7.10169017 46.0827831,6.41243153 45.7450331,5.98305085 C45.4072831,5.55367017 44.8940432,5.33898305 44.205298,5.33898305 C43.8476803,5.33898305 43.490068,5.39830449 43.1324503,5.51694915 C42.7748326,5.63559381 42.4370877,5.79660915 42.1192053,6 C41.8013229,6.20339085 41.52318,6.44632627 41.2847682,6.72881356 C41.0463564,7.01130085 40.8675503,7.3220322 40.7483444,7.66101695 L40.7483444,13 L39,13 L39,4.15254237 L40.589404,4.15254237 L40.589404,6.05084746 C41.0000021,5.42937542 41.5927114,4.93220525 42.3675497,4.55932203 C43.142388,4.18643881 43.9867504,4 44.9006623,4 C45.4966917,4 45.9933755,4.09321941 46.3907285,4.27966102 C46.7880815,4.46610263 47.1059591,4.72598703 47.3443709,5.05932203 C47.5827826,5.39265703 47.7516551,5.78530847 47.8509934,6.23728814 C47.9503316,6.6892678 48,7.18078831 48,7.71186441 L48,13 Z" id="path-2"></path>
+                </defs>
+                <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                    <g id="Desktop-HD" transform="translate(-136.000000, -45.000000)">
+                        <g id="header-section" transform="translate(0.000000, 2.000000)">
+                            <g id="Logo" transform="translate(136.000000, 43.000000)">
+                                <g id="T">
+                                    <use fill="#FFFFFF" xlink:href="#path-1"></use>
+                                    <use fill="#011627" xlink:href="#path-1"></use>
+                                </g>
+                                <g id="in">
+                                    <use fill="#FFFFFF" xlink:href="#path-2"></use>
+                                    <use fill="#000000" xlink:href="#path-2"></use>
+                                </g>
+                            </g>
+                        </g>
+                    </g>
                 </g>
-                <g id="in">
-                    <use fill="#FFFFFF" xlink:href="#path-2"></use>
-                    <use fill="#000000" xlink:href="#path-2"></use>
-                </g>
-            </g>
-        </g>
-    </g>
-</g>
-</svg>
-</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"  aria-expanded="false" aria-label="Toggle navigation">
+            </svg>
+        </a>
+ <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"  aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
-        </button>
-        <div class="collapse navbar-collapse px-5 mx-5" id="navbarNav">
-          <ul class="navbar-nav ml-auto">
-            <div class="nav-item">
-              <li class="nav-item">
-                <a class="nav-link" href="#index"><label>Acerca de</label></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#caracteristicas"><label>Caracteristicas</label></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#precio"><label>precios</label></a>
-              </li>
-            </div>
-            <div class="sesion">
-              <li class="nav-item">
-                <a class="nav-link" href="#precio"><label>Iniciar Sesion</label></a>
-              </li>
-              <button class="btn btn-primary" type="submit">Registrate</button>
-            </div>
-          </ul>
-        </div>
-      </div>
+  </button>
+<div class="collapse navbar-collapse px-5 mx-5" id="navbarNav">
+<ul class="navbar-nav">
+  <div class="nav-item">
+    <li class="nav-item">
+      <a class="nav-link" href="#index"><label>Acerca de</label></a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#caracteristicas"><label>Caracteristicas</label></a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#precio"><label>precios</label></a>
+    </li>
+</div>
+</ul>
+<div class="sesion">
+  <ul class="navbar-nav">
+    <li class="nav-item">
+      <a class="nav-link" href="#precio">
+        <label>
+        Iniciar Sesion
+      </label>
+     </a>
+ </li>
+ <li>
+   <button class="btn btn-primary" type="submit">
+     Registrate
+   </button>
+ </li>
+    </ul>
+</div>
+</div>
+</div>
 </nav>
 
 <section class="portada1">
@@ -85,15 +93,13 @@
    </div>
 </section>
 
-
-
 <section>
   <div class="imagenfondo">
     <img src="assets/img/bg-hero.svg" class="responsive">
   </div>
 </section>
 
-<section class="Seccion charact">
+<section >
 <div class="container1">
   <div class="cointainer-fluid my-5 p-5">
     <div class="caracteristicas">
@@ -141,9 +147,10 @@
           <div class="card">
               <div class="card-header">
                 Trekk-in Free
+                  <h5 class="card-title">$ 0 / mes </h5>
               </div>
+
               <div class="card-body">
-                <h5 class="card-title">$ 0 / mes </h5>
                 <p class="card-text">Ver mapas creados por usuarios</p>
                 <p class="card-text">Concretar con otros usuarios</p>
                 <br><br><br><br>
@@ -157,9 +164,9 @@
           <div class="card">
             <div class="card-header">
               Trekk-in Premium
+                 <h5 class="card-title">$3500 / mes</h5>
             </div>
             <div class="card-body">
-              <h5 class="card-title">$3500 / mes</h5>
               <p class="card-text">Ver mapas creados por usuarios</p>
               <p class="card-text">Concretar con otros usuarios</p>
               <p class="card-text">Definir mejores rutas</p>
@@ -176,11 +183,9 @@
   </div>
 </section>
 
-
 <div class="fondoprecio">
   <img src="assets/img/bg-price.svg" class="responsive">
 </div>
-
 
 <footer>
   <ul class="nav">
@@ -198,11 +203,6 @@
    </li>
  </ul>
 </footer>
-
-
-
-
-
 
 
 
