--- a/index.html
+++ b/index.html
@@ -197,10 +197,19 @@
    <li class="nav-item">
      <a class="nav-link" href="#">Sobre anuncios</a>
    </li>
-   <li class="nav-item">
-     <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">2018 Trekk-in SPA</a>
-   </li>
- </ul>
+
+   <div class="sesion2">
+     <ul class="navbar-nav">
+       <li class="nav-item">
+         <a class="nav-link" href="#precio">
+           <label>
+             <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">2018 Trekk-in SPA</a>
+           </label>
+        </a>
+    </li>
+   </ul>
+</div>
+
 </footer>
 
 
